More optimisations
Former-commit-id: 09055be7503ceb9e27093db1c2f480908849f14b